--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-359.7KB/s(Youtube:不良林), server: 36.134.154.119, port: 65072, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-431.1KB/s(Youtube:不良林), server: ingress-i2.iivvppnn.info, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.iivvppnn.info}}
-  - {name: 🇸🇬 新加坡-3.06MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.83MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-2.29MB/s(Youtube:不良林), server: 146.56.110.129, port: 26401, type: vmess, uuid: 8906c760-4d98-4301-d84d-5b21937d7d61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.28MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-555.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇸🇬 新加坡-3.06MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-5.80MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.53MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 未知国家-5.92MB/s(Youtube:不良林), server: vfly5.xyz, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8888-dc2e36f27e2d, alterId: 60, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly5.xyz}}
+  - {name: 🇺🇸 美国-343.1KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-475.0KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇮🇳 印度-744.3KB/s(Youtube:不良林), server: in-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-01.licom.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.83MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 未知国家-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-744.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.83MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 未知国家-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-744.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.83MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 未知国家-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-744.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.83MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 未知国家-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-744.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.83MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 未知国家-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-744.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.83MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 未知国家-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-744.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-431.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.83MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 未知国家-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.0KB/s(Youtube:不良林)
+      - 🇮🇳 印度-744.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.73MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
