--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-2.65MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-163.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-454.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.06MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-343.1KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.25MB/s(Youtube:不良林), server: 104.224.188.29, port: 38226, type: vmess, uuid: 9299fb78-290c-4aad-befb-0130c074a622, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-331.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇰🇷 韩国-308.6KB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇸🇬 新加坡-3.74MB/s(Youtube:不良林), server: youtube.bai-piao-wang-zhe.567568.ml, port: 443, type: vmess, uuid: e88cb308-73f7-4302-89bf-b65c7386b117, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /youtbue@bai-piao-wang-zhe_vws, ws-headers: {Host: youtube.bai-piao-wang-zhe.567568.ml}}
   - {name: 🇨🇳 中国-501.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-544.1KB/s(Youtube:不良林), server: 36.134.156.5, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇨🇳 中国-777.7KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-454.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-454.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-454.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-454.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-454.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-454.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-163.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-454.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
