--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.25MB/s(Youtube:不良林), server: 104.224.188.29, port: 38226, type: vmess, uuid: 9299fb78-290c-4aad-befb-0130c074a622, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-331.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇰🇷 韩国-308.6KB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇸🇬 新加坡-3.74MB/s(Youtube:不良林), server: youtube.bai-piao-wang-zhe.567568.ml, port: 443, type: vmess, uuid: e88cb308-73f7-4302-89bf-b65c7386b117, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /youtbue@bai-piao-wang-zhe_vws, ws-headers: {Host: youtube.bai-piao-wang-zhe.567568.ml}}
+  - {name: 🇸🇬 新加坡-2.32MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-215.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-5.02MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.58MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-22.29MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
   - {name: 🇨🇳 中国-501.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-544.1KB/s(Youtube:不良林), server: 36.134.156.5, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇨🇳 中国-777.7KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-429.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-359.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-182.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-470.6KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-429.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-429.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-429.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-429.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-429.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-429.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-429.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
